k8s/base/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resources
spec:
  selector:
    app: resources
  ports:
    - port: 8005
      targetPort: 8005
