k8s/base/resources/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: resources
spec:
  podSelector:
    matchLabels:
      app: resources
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: gateway
      ports:
        - port: 8005
  egress:
    - ports:
        - port: 5432
        - port: 6379
        - port: 53
      protocol: UDP
    - ports:
        - port: 53
      protocol: UDP
